[package]
name = "hta-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
regex = "1.10.6"
log = "0.4.22"  # For logging
env_logger = "0.11.5"  # For setting up logging environment

[dev-dependencies]
assert_cmd = "2.0.16"  # For running and asserting commands in tests
tempfile = "3.11.0"  # For temporary file handling
